# agent-project-memory

./: .agent-memory-ignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  chatgpt-write-test-2026-06-14.md  pyproject.toml
.codex/: AGENTS.md
.codex-plugin/: plugin.json
.codex/project_memory/: INDEX.md
.github/workflows/: ci.yml
assets/promo/: agent-project-memory-asset-manifest.html
docs/: codex-continuity.md  control-loop.md  design.md  google-drive-backup.md  migration-and-uninstall.md  recovery-workflow.md  release-2.0.0.md  security.md
docs/audits/: 2026-06-22-phase0-baseline.md  2026-06-22-stage2-foundations.md  2026-06-22-stage3-worktree-checkpoints.md  2026-06-22-stage4-interruption-recovery.md  2026-06-22-stage5-project-bootstrap.md  2026-06-22-stage6-7-control-loop.md  2026-06-22-stage8-plugin-installers.md  2026-06-23-final-delivery-gate.md  (+2 more)
hooks/: hooks.json
installers/: install-claude.ps1  install-claude.sh  install-codex.ps1  install-codex.sh  install-common.ps1  install-common.sh  install-gemini.ps1  install-gemini.sh  uninstall.ps1  uninstall.sh
scripts/: apm.py  hook-entry.py  manage-install.py  privacy_scan.py  smoke-test.ps1  smoke-test.sh  validate.sh  validate_plugin.py
snippets/: AGENT_RULE_BLOCK.md
tests/: helpers.py  test_bootstrap.py  test_checkpoint.py  test_config.py  test_continuity.py  test_hook_entry.py  test_identity.py  test_installer_lifecycle.py  test_installers.py  test_io.py  test_packaging_cli_skill.py  test_privacy.py  test_privacy_scan_script.py  test_router_feedback_gate.py
(+35 files in other folders)
