[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-project-memory"
version = "2.0.0.dev0"
description = "Portable project memory and Codex continuity primitives"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
